--- a/index.html
+++ b/index.html
@@ -109,9 +109,19 @@
     <button onclick="deployVPN()">🚀 Deploy VPN Server</button>
     <button onclick="destroyVPN()">🗑 Destroy VPN Server</button>
   </div>
-  
+
   <div class="download-container">
-    <button onclick="downloadProfile()">⬇ Download .ovpn Profile</button>
+    <h2>Download VPN Configuration</h2>
+    <div class="user-files">
+      <div class="user-file">
+        <span>Vitvik</span>
+        <button onclick="downloadConfig('Vitvik')">Download Vitvik Config</button>
+      </div>
+      <div class="user-file">
+        <span>Bodia</span>
+        <button onclick="downloadConfig('Bodia')">Download Bodia Config</button>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -137,50 +147,68 @@
       const region = document.getElementById("region").value;
       const token = new URLSearchParams(window.location.hash.slice(1)).get('id_token');
 
-    fetch("https://ro8yy2ok66.execute-api.eu-west-1.amazonaws.com/prod/deploy", {
-      method: "POST",
-      headers: {
-        Authorization: `Bearer ${token}`,
-        "Content-Type": "application/json"
-      },
-    body: JSON.stringify({ region })
-    })
-    .then(response => {
-      if (response.ok) {
-        alert("✅ Deployment initiated!");
-      } else {
-        alert("❌ Deployment failed!");
-      }
-    })
-    .catch(error => {
-      alert("❌ Error: " + error.message);
-    });
-    }
-
-    function destroyVPN() {
-    const region = document.getElementById("region").value;
-    const token = new URLSearchParams(window.location.hash.slice(1)).get("id_token");
-
-    fetch("https://ro8yy2ok66.execute-api.eu-west-1.amazonaws.com/prod/destroy", {
-      method: "POST",
-      headers: {
-        "Authorization": `Bearer ${token}`,
-        "Content-Type": "application/json"
-      },
+      fetch("https://ro8yy2ok66.execute-api.eu-west-1.amazonaws.com/prod/deploy", {
+        method: "POST",
+        headers: {
+          Authorization: `Bearer ${token}`,
+          "Content-Type": "application/json"
+        },
       body: JSON.stringify({ region })
       })
-      .then(response => response.json())
-      .then(result => {
-      alert(result.message || "✅ Destroy started!");
+      .then(response => {
+        if (response.ok) {
+          alert("✅ Deployment initiated!");
+        } else {
+          alert("❌ Deployment failed!");
+        }
       })
       .catch(error => {
         alert("❌ Error: " + error.message);
       });
     }
 
-    function downloadProfile() {
-      const region = document.getElementById("region").value;
-      window.open(`https://your-api-url/download?region=${region}`, '_blank');
+    function destroyVPN() {
+    const region = document.getElementById("region").value;
+    const token = new URLSearchParams(window.location.hash.slice(1)).get("id_token");
+
+      fetch("https://ro8yy2ok66.execute-api.eu-west-1.amazonaws.com/prod/destroy", {
+        method: "POST",
+        headers: {
+          "Authorization": `Bearer ${token}`,
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ region })
+        })
+        .then(response => response.json())
+        .then(result => {
+        alert(result.message || "✅ Destroy started!");
+        })
+        .catch(error => {
+          alert("❌ Error: " + error.message);
+      });
+    }
+
+    async function downloadConfig(username) {
+      try {
+          const response = await fetch(`https://ro8yy2ok66.execute-api.eu-west-1.amazonaws.com/prod/download?username=${username}`);
+          
+          if (!response.ok) {
+              throw new Error(`HTTP error! status: ${response.status}`);
+          }
+          
+          const blob = await response.blob();
+          const url = window.URL.createObjectURL(blob);
+          const a = document.createElement('a');
+          a.href = url;
+          a.download = `${username}.ovpn`;
+          document.body.appendChild(a);
+          a.click();
+          window.URL.revokeObjectURL(url);
+          document.body.removeChild(a);
+      } catch (error) {
+          console.error('Error downloading config:', error);
+          alert('Error downloading configuration file. Please try again.');
+      }
     }
   </script>
 </body>
